src/coolcmp/unit_tests/Custom/type_checker/fail/formal-wrong-type.cl
class Main inherits IO {
    main(z: Int, b:String, a:Fuk): Int {
        1
    };
};
